feat(module:all):webpack结合使用vue,vue-router

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <title>webpack学习</title>
 </head>
 <body>
-  <div class="box"></div>
-  <div class="box1"></div>
-  <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>
+  <div id="app"></div>
 </body>
 </html>
